--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .srOnly { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 
+/* DEBUGGER */
+/* * {
+  border: .5px solid red;
+} */
+
+
 
 /* GLOBAL STYLES */
-
-.App {
-  text-align: center;
-}
 
 * {
   padding: 0;
@@ -29,7 +31,17 @@ img {
 
 
 
-/* TYPOGRAPHY */
+/* WRAPPER STYLES */
+
+.insideWrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 80%;
+}
+
+
+
+/* GLOBAL TYPOGRAPHY */
 
 @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Josefin+Sans:wght@300;400&display=swap');
 
@@ -40,10 +52,86 @@ html {
 body {
   font-family: 'Josefin Sans', sans-serif;
   letter-spacing: 1.2px;
-  line-height: 1.2rem;
 }
 
 h1, 
 button {
   font-family: 'Cardo', serif;
 }
+
+
+
+/* HEADER STYLES */
+
+header {
+  background-image: url(./assets/headerBackground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 40%;
+  height: 100vh;
+}
+
+.headerContents {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+h1 {
+  font-weight: 300;
+  font-size: 10rem;
+  color: white;
+  width: 30%;
+  padding: 50px 50px 25px 0;
+  line-height: 10rem;
+  margin: 2.5% 35% 0 0;
+}
+
+.aboutUs {
+  font-size: 2rem;
+  padding:30px;
+  background-color: rgba(255,255,255,0.75);
+  border-radius: 10px;
+}
+
+.startButton {
+  cursor: pointer;
+  font-size: 2.5rem;
+  letter-spacing: 0.4rem;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  padding: 12px 25px;
+  border: none;
+  border-radius: 10px;
+  background: rgba(0,0,0,0.7);
+  color: white;
+  align-self: flex-end;
+  transition: all 0.4s;
+}
+
+.startButton:hover, 
+.startButton:focus {
+  background: black;
+}
+
+blockquote {
+  text-align: center;
+  margin: 0 auto;
+  font-style: italic;
+  width: 50%;
+}
+
+figcaption {
+  margin-top: 10px;
+  font-weight: bold;
+  text-align: center; 
+  width: 50%;
+  margin: 10px auto 0;
+}
+
+.aboutUsText {
+  margin-top: 30px;
+}
+
