--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
 
 
 /* WRAPPER STYLES */
@@ -68,7 +74,18 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 40%;
-  height: 100vh;
+  height: 95vh;
+}
+
+.galleryToggleButton {
+  cursor: pointer;
+  font-size: 5rem;
+  line-height: 0;
+  background: none;
+  border: none;
+  position: fixed;
+  top: 30px;
+  right: 30px;
 }
 
 .headerContents {
@@ -107,8 +124,11 @@ h1 {
   border-radius: 10px;
   background: rgba(0,0,0,0.7);
   color: white;
-  align-self: flex-end;
   transition: all 0.4s;
+}
+
+.startButtonContainer {
+  align-self: flex-end;
 }
 
 .startButton:hover, 
@@ -135,3 +155,86 @@ figcaption {
   margin-top: 30px;
 }
 
+
+
+/* GALLERY STYLES */
+
+main {
+  background: aliceblue;
+}
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 50px 0;
+}
+
+.galleryImage {
+  list-style: none;
+  width: 32%;
+  margin-top: 30px;
+  position: relative;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.imgFooter {
+  font-size: 1rem;
+  background: black;
+  color: white;
+  text-align: center;
+  padding: 5px;
+}
+
+.banner {
+  padding: 0 20px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+}
+
+.banner:hover,
+.banner:active {
+  opacity: 1;
+}
+
+.hearts {
+  font-size: 6rem;
+  color: red;
+}
+
+.likedText {
+  letter-spacing: 5px;
+  font-size: 3rem;
+  font-family: 'Cardo', serif;
+  color: white;
+}
+
+
+
+/* FOOTER STYLES */
+
+footer {
+  height: 5vh;
+  background: black;
+  text-align: center;
+  padding: 10px 0;
+}
+
+footer p {
+  color: white;
+}
