--- a/src/App.css
+++ b/src/App.css
@@ -179,12 +179,16 @@ main {
 }
 
 img {
-  height: auto;
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
   max-width: 100%;
   max-height: 100%;
 }
 
 .imgFooter {
+  position: relative;
+  z-index: 10;
   font-size: 1rem;
   background: black;
   color: white;
