--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ body {
 }
 
 h1, 
+h2, 
 button {
   font-family: 'Cardo', serif;
 }
@@ -163,12 +164,19 @@ main {
   background: aliceblue;
 }
 
+h2 {
+  text-align: center;
+  font-size: 4rem;
+  text-decoration: underline;
+  padding-top: 50px;
+}
+
 .gallery {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 50px 0;
+  padding: 25px 0 50px;
 }
 
 .galleryImage {
@@ -212,7 +220,7 @@ img {
 }
 
 .banner:hover,
-.banner:active {
+.banner:focus {
   opacity: 1;
 }
 
