--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,6 @@ html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: 
 .srOnly { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
 
 
-/* DEBUGGER */
-/* * {
-  border: .5px solid red;
-} */
-
-
-
 /* GLOBAL STYLES */
 
 * {
@@ -112,6 +105,10 @@ h1 {
   padding:30px;
   background-color: rgba(255,255,255,0.75);
   border-radius: 10px;
+}
+
+.aboutUsIcon {
+  font-size: 1.5rem;
 }
 
 .startButton {
@@ -250,3 +247,81 @@ footer {
 footer p {
   color: white;
 }
+
+
+
+
+/* MEDIA QUERIES */
+@media (max-width: 970px) {
+  .aboutUs {
+    font-size: 1.6rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .imgFooter {
+    font-size: 0.9rem;
+  }
+
+  .galleryToggleButton {
+    font-size: 2.5rem;
+    top: 15px;
+    right: 5px;
+  }
+}
+
+@media (max-width: 650px) {
+  .startButton {
+    margin-bottom: 15px;
+  }
+
+  .galleryImage {
+    width: 47%;
+  }
+}
+
+@media (max-width: 575px) {
+  h1 {
+    font-size: 7rem;
+    line-height: 5rem;
+    margin-top: 15%;
+  }
+
+  blockquote, 
+  figcaption {
+    width: 100%;
+  }
+
+  .startButton {
+    font-size: 1.5rem;
+    margin-right: 0;
+  }
+
+}
+
+@media (max-width: 420px) {
+  h1 {
+    margin-top: 15%;
+    width: 60%;
+  }
+
+  blockquote,
+  figcaption {
+    display: none;
+  }
+
+  .aboutUs {
+    padding: 15px;
+  }
+
+  .aboutUsText {
+    margin-top: 0;
+  }
+
+    .galleryImage {
+    width: 100%;
+  }
+
+
+}
+
